--- a/final_recommender.ipynb
+++ b/final_recommender.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## (In Progress)\n",
+    "#### This code utilizes all four datasets provided by movielens"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
