--- a/simple_movie_recommender.ipynb
+++ b/simple_movie_recommender.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### This code utilizes only one dataset on movie ratings"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 1. Importing libraries"
    ]
   },
